elasticsearch/es-data.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-data
  namespace: elastic
spec:
  serviceName: elasticsearch
  replicas: 1

  selector:
    matchLabels:
      app: elasticsearch
      role: data

  template:
    metadata:
      labels:
        app: elasticsearch
        role: data

    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0

          ports:
            - name: http
              containerPort: 9200
            - name: transport
              containerPort: 9300

          resources:
            requests:
              cpu: 100m
              memory: 768Mi
            limits:
              cpu: 500m
              memory: 1Gi

          volumeMounts:
            - name: data-storage
              mountPath: /usr/share/elasticsearch/data

  volumeClaimTemplates:
    - metadata:
        name: data-storage
      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 5Gi
