elasticsearch/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  clusterIP: None
  selector:
    app: elasticsearch
  ports:
    - name: transport
      port: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-client
  namespace: elastic
spec:
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
