elasticsearch/es-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: elastic
spec:
  ingressClassName: nginx
  rules:
    - host: elasticsearch.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-client
                port:
                  number: 9200
